unpackaged/main/default/objects/PersonEducation/PersonEducation.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>