unpackaged/main/default/objects/PersonEducation/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electronic (Parchment)</fullName>
            </value>
            <value>
                <fullName>Electronic (National Student Clearinghouse)</fullName>
            </value>
            <value>
                <fullName>Official Mail</fullName>
            </value>
            <value>
                <fullName>Hand Delivered (Sealed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>