unpackaged/main/default/objects/PersonEducation/fields/Evaluated_By__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Evaluated_Educations</relationshipName>
    <type>Lookup</type>
</CustomField>