unpackaged/main/default/objects/PersonEducation/fields/Official_Transcript_Verified__c.field-meta.xml
<CustomField>
    <fullName>Official_Transcript_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Official Transcript Verified</label>
    <type>Checkbox</type>
</CustomField>