unpackaged/main/default/objects/PersonEducation/fields/Prior_Credits_Attempted__c.field-meta.xml
<CustomField>
    <fullName>Prior_Credits_Attempted__c</fullName>
    <label>Prior Credits Attempted</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>