unpackaged/main/default/objects/PersonEducation/fields/Transcript_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Transcript_Ordered_Date__c</fullName>
    <label>Transcript Ordered Date</label>
    <type>Date</type>
</CustomField>