unpackaged/main/default/objects/PersonEducation/fields/Transcript_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Transcript_Received_Date__c</fullName>
    <label>Transcript Received Date</label>
    <type>Date</type>
</CustomField>