unpackaged/main/default/objects/PersonEducation/fields/Transcript_Status__c.field-meta.xml
<CustomField>
    <fullName>Transcript_Status__c</fullName>
    <label>Transcript Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Evaluated</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>