unpackaged/main/default/objects/PersonEducation/fields/Transcript_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Transcript_Tracking_Number__c</fullName>
    <label>Transcript Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>