unpackaged/main/default/objects/PersonEducation/fields/Transfer_Credits_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Credits_Accepted__c</fullName>
    <label>Transfer Credits Accepted</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>