unpackaged/main/default/objects/PersonEducation/fields/Verification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Verification_Notes__c</fullName>
    <label>Verification Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>