unpackaged/main/default/objects/PersonEducation/fields/Veteran_Benefits_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Veteran_Benefits_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Veteran Benefits Applicable</label>
    <type>Checkbox</type>
</CustomField>